--- a/HumanitarianApp.Api/client/src/components/app/app.scss
+++ b/HumanitarianApp.Api/client/src/components/app/app.scss
@@ -10,6 +10,9 @@
   font-weight: 700;
   color: $blue;
   text-align: center;
+  &--white {
+    color: $white;
+  }
 }
 
 @import '../../styles/media.scss';
