--- a/HumanitarianApp.Api/client/src/styles/style.scss
+++ b/HumanitarianApp.Api/client/src/styles/style.scss
@@ -13,3 +13,7 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+body {
+  padding: 25px 10px;
+}
