--- a/HumanitarianApp.Api/client/src/styles/style.scss
+++ b/HumanitarianApp.Api/client/src/styles/style.scss
@@ -8,6 +8,12 @@
   font-weight: 400;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
