--- a/HumanitarianApp.Api/client/src/styles/media.scss
+++ b/HumanitarianApp.Api/client/src/styles/media.scss
@@ -2,11 +2,24 @@
   .container {
     width: 960px;
   }
+  .section {
+    &__info {
+      padding: 15px 0;
+    }
+    &__filters {
+      gap: 148px;
+    }
+  }
 }
 
 @media (max-width: 992px) {
   .container {
     width: 720px;
+  }
+  .section {
+    &__filters {
+      gap: 28px;
+    }
   }
 }
 
@@ -27,17 +40,33 @@
       width: 540px;
     }
   }
+  .section {
+    &__filters {
+      width: 204px;;
+      flex-wrap: wrap-reverse;
+      gap: 10px;
+    }
+  }
 }
 
 @media (max-width: 576px) {
   .container {
     width: 100%;
-    padding: 0 15px;
+    padding: 0 10px;
   }
   .pop-up {
     padding: 0 10px;
     &__wrapper {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .section {
+    &__wrapper {
+      flex-direction: column;
+      gap: 15px;
     }
   }
 }
