--- a/HumanitarianApp.Api/client/src/components/burger-menu/burgerMenu.scss
+++ b/HumanitarianApp.Api/client/src/components/burger-menu/burgerMenu.scss
@@ -7,9 +7,10 @@
   width: 100vw;
   height: 100vh;
   background-color: $blue;
-  padding: 100px 0;
+  padding: 70px 0;
   animation-name: toDown;
   animation-duration: .3s;
+  z-index: 1;
   &__wrapper {
     height: 100%;
     display: flex;
@@ -20,7 +21,7 @@
   &__close {
     position: absolute;
     width: 40px;
-    bottom: 4%;
+    bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
     color: $white;
