--- a/HumanitarianApp.Api/client/src/components/header/header.scss
+++ b/HumanitarianApp.Api/client/src/components/header/header.scss
@@ -2,7 +2,7 @@
 
 .header {
   margin: 0 auto;
-  background-color: #577BC1;
+  background-color: $blue;
   max-width: 1200px;
   border-radius: 15px 15px 0 0;
   user-select: none;
