--- a/HumanitarianApp.Api/client/src/components/form/form.scss
+++ b/HumanitarianApp.Api/client/src/components/form/form.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 
 .form {
+  margin-top: 10px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -9,13 +10,13 @@
   border: 3px solid $blue;
   border-radius: 15px;
   padding: 10px;
-  padding-top: 0;
   &__inputs {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    column-gap: 17px;
   }
   &__input {
     margin-top: 10px;
@@ -35,7 +36,7 @@
     }
   }
   &__button {
-    margin-top: 15px;
+    margin-top: 10px;
     width: 200px;
     max-width: 100%;
     height: 50px;
@@ -52,5 +53,21 @@
       background-color: $yellow;
       color: $blue;
     }
+  }
+  &__bank-block {
+    text-align: center;
+  }
+  &__bank-account {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 17px;
+  }
+  &__bank-data {
+    margin-top: 10px;
+    font-size: 18px;
+    color: $blue;
+    font-weight: 700;
   }
 }
