--- a/HumanitarianApp.Api/client/src/components/section/section.scss
+++ b/HumanitarianApp.Api/client/src/components/section/section.scss
@@ -3,10 +3,9 @@
 .section {
   position: relative;
   margin: 0 auto;
-  margin-top: 15px;
   max-width: 1200px;
   &__info {
-    margin-top: 15px;
+    margin-top: 10px;
     padding: 15px;
     background-color: $blue;
     user-select: none;
@@ -41,5 +40,24 @@
     outline: none;
     font-size: 15px;
     cursor: pointer;
+  }
+  &__open {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 25px;
+    background-color: $white;
+    color: $blue;
+    font-size: 18px;
+    font-weight: 700;
+    border: 3px solid $blue;
+    border-top: none;
+    border-radius: 0 0 10px 10px;
+    transition: all .3s ease;
+    cursor: pointer;
+    &:hover {
+      transition: all .3s ease;
+      background-color: $blue;
+      color: $white;
+    }
   }
 }
