refactored, restyled forms, added new logo

--- a/HumanitarianApp.Api/client/src/components/footer/footer.scss
+++ b/HumanitarianApp.Api/client/src/components/footer/footer.scss
@@ -14,4 +14,11 @@
     gap: 50px;
     color: $white;
   }
+  &__copyright {
+    color: $yellow;
+  }
+  &__email {
+    text-decoration: none;
+    color: $yellow;
+  }
 }
