--- a/HumanitarianApp.Api/client/src/components/form/form.scss
+++ b/HumanitarianApp.Api/client/src/components/form/form.scss
@@ -35,24 +35,37 @@
       resize: none;
     }
   }
-  &__button {
+  &__submit {
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid $blue;
+    border-radius: 10px;
+  }
+  &__rules {
+    height: 50px;
+    margin: 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+  }
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+  }
+  &__button {
     width: 200px;
     max-width: 100%;
     height: 50px;
     background-color: $blue;
     color: $white;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 700;
-    border: 3px solid $blue;
-    border-radius: 10px;
+    border: none;
     transition: all .3s ease;
     cursor: pointer;
-    &:hover {
-      transition: all .3s ease;
-      background-color: $yellow;
-      color: $blue;
-    }
   }
   &__bank-block {
     text-align: center;
