--- a/HumanitarianApp.Api/client/src/components/burger-menu/burgerMenu.scss
+++ b/HumanitarianApp.Api/client/src/components/burger-menu/burgerMenu.scss
@@ -4,12 +4,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: $blue;
   padding: 70px 0;
-  animation-name: toDown;
-  animation-duration: .3s;
+  animation-name: openBurger;
+  animation-duration: .5s;
   z-index: 1;
   &__wrapper {
     height: 100%;
@@ -56,7 +56,7 @@
   }
 }
 
-@keyframes toDown {
+@keyframes openBurger {
   from {
     top: -100%
   }
