--- a/HumanitarianApp.Api/client/src/components/footer/footer.scss
+++ b/HumanitarianApp.Api/client/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
   padding: 3px;
   margin: 0 auto;
   margin-top: 10px;
-  max-width: 97%;
+  max-width: 1200px;
   background-color: $blue;
   border-radius: 0 0 15px 15px;
   &__wrapper {
