--- a/HumanitarianApp.Api/client/src/components/footer/footer.scss
+++ b/HumanitarianApp.Api/client/src/components/footer/footer.scss
@@ -19,9 +19,10 @@
     color: $yellow;
     text-align: center;
   }
-  &__email {
+  &__contaks {
     text-decoration: none;
     color: $yellow;
+    text-align: center;
   }
 }
 
@@ -30,28 +31,20 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  margin-top: 0.25rem;
-  margin-bottom: 1rem;
+  margin-top: 5px;
+  margin-bottom: 5px;
   padding-left: 0;
-}
-
-.social-icons>li {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+  column-gap: 5px;
 }
 
 .social-icons a {
   position: relative;
   background-color: #eee;
   display: block;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   transition: background-color .3s ease-in-out;
-  width: 2rem;
-  height: 2rem;
-  border-radius: .25rem;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
 }
 
 .social-icons a:hover {
@@ -61,12 +54,12 @@
 .social-icons a::before {
   content: "";
   position: absolute;
-  width: 1.2rem;
-  height: 1.2rem;
-  left: .35rem;
-  top: .4rem;
-  background: transparent no-repeat center center;
+  width: 20px;
+  height: 20px;  
   background-size: 100% 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   
 }
 
