added navigation, rebuild files

--- a/HumanitarianApp.Api/client/src/components/ad-list/adList.scss
+++ b/HumanitarianApp.Api/client/src/components/ad-list/adList.scss
@@ -11,6 +11,7 @@
     margin-top: 10px;
     font-size: 15px;
     line-height: 20px;
+    text-align: left;
   }
   &__contacts {
     margin-top: 10px;
