--- a/HumanitarianApp.Api/client/src/components/ad-list/adList.scss
+++ b/HumanitarianApp.Api/client/src/components/ad-list/adList.scss
@@ -2,6 +2,7 @@
 
 .ad-list {
   &__item {
+    position: relative;
     margin-bottom: 10px;
     padding: 10px;
     border: 3px solid $blue;
@@ -43,62 +44,60 @@
       right: 22%;
     }
   }
-}
-
-.share{
-  display: flex;
-  justify-content: end;
-  column-gap: 10px;
-}
-
-.share a {
-  position: relative;
-  top: -30px;
-  background-color: #eee;
-  display: block;
-  transition: background-color .3s ease-in-out;
-  width: 30px;
-  height: 30px;
-  border-radius: 5px;
-}
-
-.share a:hover {
-  background-color: #e0e0e0;
-  width: 120px;
-  transition: 0.3s; 
-  
-}
-
-.second_block {
-  display: none;
-}
-
-.share a:hover .second_block {  
-  text-align: left; 
-  display: block;
-  padding: 6px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-.share a::before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 20px;  
-  background-size: 100% 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.share .social-icon-fb::before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%234267B2' d='M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z'/%3E%3C/svg%3E");
-}
-
-.share .social-icon-telegram::before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2327a7e7' d='M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z'/%3E%3C/svg%3E");
-}
-
-.share .social-icon-instagram::before {
-  background-image: url("../../assets/icons/social-icons/Instagram_logo_2016.svg");
+  &__share{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+    &-link {
+      position: relative;
+      display: block;
+      height: 28px;
+      width: 28px;
+      text-align-last: left;
+      padding-left: 5px;
+      background-color: #e0e0e0;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 15px;
+      line-height: 28px;
+      &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
+        display: block;
+        height: 20px;
+        width: 28px;
+        border-radius: 5px;
+      }
+      span {
+        display: none;
+      }
+      &:hover {
+        width: 117px;
+      }
+      &:hover span {
+        display: block;
+      }
+      &--fb {
+        &::before {
+          background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%234267B2' d='M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z'/%3E%3C/svg%3E") center center/contain no-repeat;
+        }
+      }
+      &--instagram {
+        &::before {
+          background: url("../../assets/icons/social-icons/Instagram_logo_2016.svg") center center/contain no-repeat;
+        }
+      }
+      &--telegram {
+        &::before {
+          background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2327a7e7' d='M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z'/%3E%3C/svg%3E") center center/contain no-repeat;
+        }
+      }
+    }
+  }
 }
