--- a/HumanitarianApp.Api/client/src/styles/app.scss
+++ b/HumanitarianApp.Api/client/src/styles/app.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+@import 'variables';
+@import 'media';
 
 .container {
   margin: 0 auto;
@@ -18,5 +19,3 @@
     color: $black;
   }
 }
-
-@import '../../styles/media.scss';
