--- a/HumanitarianApp.Api/client/src/layouts/pageLayout/shared/agreement/agreement.scss
+++ b/HumanitarianApp.Api/client/src/layouts/pageLayout/shared/agreement/agreement.scss
@@ -1,13 +1,10 @@
-@import '../../styles/variables.scss';
+@import '../../../../styles/variables';
 
 .agreement {
   width: 1200px;
   max-width: 100%;
   height: 100%;
-  padding-left: 30px;
-  padding-right: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 10px 15px 30px;
   position: fixed;
   top: 0;
   left: 50%;
@@ -34,8 +31,7 @@
     }
   }
   &__close {
-    margin: 0 auto;
-    margin-top: 15px;
+    margin: 15px auto 0;
     display: block;
     width: 150px;
     height: 30px;
