--- a/HumanitarianApp.Api/client/src/shared/components/ad-list/carousel.scss
+++ b/HumanitarianApp.Api/client/src/shared/components/ad-list/carousel.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import '../../../styles/variables';
 
 .carousel .control-arrow, .carousel.carousel-slider .control-arrow {
   -webkit-transition: all 0.25s ease-in;
