--- a/HumanitarianApp.Api/client/src/layouts/pageLayout/shared/volunteer-card/volunteerСard.scss
+++ b/HumanitarianApp.Api/client/src/layouts/pageLayout/shared/volunteer-card/volunteerСard.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import "../../../../styles/variables.scss";
 
 .card {
   &__item {
@@ -109,7 +109,7 @@
 
       &--instagram {
         &::before {
-          background: url("../../assets/icons/social-icons/Instagram_logo_2016.svg") center center/contain no-repeat;
+          background: url("../../../../assets/icons/social-icons/Instagram_logo_2016.svg") center center/contain no-repeat;
         }
       }
 
